# orbit

./: .gitignore  .release-state.env  COMPLEXITY  Cargo.toml  Justfile  README.md  deny.toml
.github/workflows/: ci.yml  coverage.yml  deploy-docs.yml
architecture/: ARCHITECTURE.md  ORBITFILE.md
cli/: Cargo.toml
cli/src/: args.rs  client.rs  config.rs  filters.rs  format.rs  interactive.rs  lib.rs  main.rs  mfa.rs  sbatch.rs  stream.rs
cli/src/hpcfile/: format.rs  mod.rs
cli/src/project/: hpcfile.rs  mod.rs  script.rs  submit_job.sbatch
completions/: _orbit  orbit.bash
docs/: ARCHITECTURE.md  ARCHITECTURE_PROPOSAL.md  ORBITD_ARCHITECTURE_PROPOSAL.md  TEMPLATES_PROPOSAL.md
hpcd/: Cargo.toml
hpcd/src/: config.rs  main.rs
hpcd/src/agent/: add_cluster.rs  error_codes.rs  helpers.rs  managers.rs  mod.rs  rpc.rs  sbatch.rs  service.rs  sessions.rs  slurm.rs  submit.rs  types.rs
hpcd/src/ssh/: error.rs  mod.rs  session.rs  sync.rs  sync_plan.rs  utils.rs
hpcd/src/ssh/session/: auth.rs  exec.rs  sftp.rs  tests.rs
hpcd/src/state/: db.rs
hpcd/src/util/: mod.rs  random.rs  remote_path.rs
orbit/: Cargo.toml
orbit/src/: args.rs  client.rs  config.rs  errors.rs  filters.rs  format.rs  interaction.rs  interactive.rs  lib.rs  main.rs  mfa.rs  non_interactive.rs  sbatch.rs  stream.rs
orbit/src/adapters/: mod.rs  presentation.rs
orbit/src/adapters/cli/: args.rs  filters.rs  mod.rs
orbit/src/adapters/config/: mod.rs
orbit/src/adapters/fs/: mod.rs
orbit/src/adapters/grpc/: mod.rs  run_errors.rs  submit_errors.rs
orbit/src/adapters/json/: format.rs  mod.rs
orbit/src/adapters/network/: mod.rs
orbit/src/adapters/terminal/: console.rs  enum_picker.rs  format.rs  mfa.rs  mod.rs  prompt.rs  sbatch_picker.rs
orbit/src/app/: dispatcher.rs  errors.rs  mod.rs
orbit/src/app/commands/: mod.rs  results.rs
orbit/src/app/handlers/: mod.rs
orbit/src/app/ports/: mod.rs
orbit/src/app/services/: mod.rs  project.rs  templates.rs
orbitd/: Cargo.toml
orbitd/src/: config.rs  logging.rs  main.rs
orbitd/src/adapters/: mod.rs  telemetry.rs
orbitd/src/adapters/cli/: mod.rs
orbitd/src/adapters/db/: mod.rs  sqlite_store.rs  store.rs
orbitd/src/adapters/fs/: mod.rs
orbitd/src/adapters/grpc/: agent_server.rs  mapping.rs  mod.rs
orbitd/src/adapters/network/: mod.rs  net.rs  reachability.rs
orbitd/src/adapters/ssh/: mod.rs  session.rs  session_cache.rs  sync.rs  sync_plan.rs  utils.rs
orbitd/src/adapters/ssh/session/: auth.rs  exec.rs  sftp.rs  tests.rs
orbitd/src/adapters/time/: mod.rs
orbitd/src/agent/: add_cluster.rs  helpers.rs  os.rs  rpc.rs  sbatch.rs  service.rs  sessions.rs  slurm.rs  types.rs
orbitd/src/app/: errors.rs  mod.rs  types.rs  usecases.rs
orbitd/src/app/legacy/agent/: error_codes.rs  helpers.rs  managers.rs  mod.rs  submit.rs
orbitd/src/app/legacy/util/: mod.rs  random.rs
orbitd/src/app/ports/: blueprint_store.rs  clock.rs  cluster_store.rs  file_sync.rs  job_store.rs  local_fs.rs  mfa.rs  mod.rs  network.rs  project_store.rs  remote_exec.rs  stream_output.rs  telemetry.rs
orbitd/src/app/services/: mod.rs  project_building.rs  random.rs  remote_path.rs  run_paths.rs  sbatch.rs  shell.rs  slurm.rs  submit_paths.rs  templates.rs
orbitd/src/ssh/: mod.rs  session.rs
orbitd/src/ssh/session/: auth.rs  sftp.rs  tests.rs
orbitd/src/state/: db.rs  mod.rs
orbitd/src/util/: mod.rs  reachability.rs
proto/: Cargo.toml  build.rs
proto/protos/: agent.proto
scripts/: coverage_summary.py  generate_cli_docs.py  record_asciinema.sh  release.sh  version_docs.sh
tests/: README.md  config.toml  run_e2e.py
tests/01_smoke/: README.md  run.sh  submit.sbatch
tests/02_python_stats/: README.md  main.py
tests/02_python_stats/data/: input.csv
tests/02_python_stats/scripts/: submit.sbatch
tests/03_filter_tree/: README.md  run.sh  submit.sbatch
tests/03_filter_tree/cache/: keep.txt  scratch.tmp
tests/03_filter_tree/data/: ignore.tmp
tests/03_filter_tree/data/nested/: keep.csv
tests/03_filter_tree/notes/: readme.md
tests/04_binary_output/: README.md  run.sh  submit.sbatch
tests/04_binary_output/data/: sample.txt
tests/05_cancel_job/: README.md  run.sh  submit.sbatch
tests/06_templated_hashes/: Orbitfile  README.md  run.sh  submit.sbatch
tests/91_queued_state/: README.md  submit.sbatch
tests/92_long_running_hashes/: README.md  submit.sbatch
tests/93_hello_world/: README.md  run.sh  submit.sbatch
tests/94_special_templated_hashes/: Orbitfile  README.md  inputs.txt  submit.sbatch
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  versions.json
website/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
website/.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json  site-docs-cli-commands-cluster-orbit-cluster-add-md-df9.json  site-docs-cli-commands-cluster-orbit-cluster-delete-md-c67.json  site-docs-cli-commands-cluster-orbit-cluster-get-md-659.json  site-docs-cli-commands-cluster-orbit-cluster-list-md-df5.json  site-docs-cli-commands-cluster-orbit-cluster-ls-md-649.json  site-docs-cli-commands-cluster-orbit-cluster-md-fb5.json  site-docs-cli-commands-cluster-orbit-cluster-set-md-b74.json  site-docs-cli-commands-job-orbit-job-cancel-md-935.json  site-docs-cli-commands-job-orbit-job-cleanup-md-18f.json  site-docs-cli-commands-job-orbit-job-get-md-9ec.json  site-docs-cli-commands-job-orbit-job-list-md-530.json  site-docs-cli-commands-job-orbit-job-logs-md-65c.json  (+75 more)
website/docs/: intro.md  orbitfile.md  quickstart.md
website/docs/cli/: index.md
website/docs/cli/commands/: orbit.md  (+3 more)
website/src/css/: custom.css
website/versioned_docs/version-0.14.0/: quickstart.md  versioning.md
website/versioned_docs/version-0.15.0/: orbitfile.md
website/versioned_docs/version-0.16.0/: orbitfile.md
website/versioned_docs/version-0.17.0/: versioning.md
website/versioned_sidebars/: version-0.15.0-sidebars.json  version-0.16.0-sidebars.json
(+61 files in other folders)
