[workspace]
resolver = "3"
members = [ "orbit", "orbitd", "proto" ]


[workspace.dependencies]
tonic = { version = "0.14.1", features = ["transport"] }
tonic-build = "0.14.1"
tonic-types = "0.14.1"
tonic-prost = "0.14.1"
tonic-prost-build = "0.14.1"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.47.1", features = ["full"] }
