[package]
name = "cli"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
proto = { path = "../proto" }
clap = { version = "4.5.46", features = ["derive", "wrap_help"] }
anyhow = "1.0.99"
tokio-stream = "0.1.17"
log = "0.4.27"
shellexpand = { version = "3.1.1", features = ["full"] }
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tera = "1.20.0"
crossterm = "0.28.1"
ratatui = { version = "0.28.0", features = ["crossterm"] }
rand = "0.9.2"
dirs = "6.0.0"


[[bin]]
name = "hpc"
path = "src/main.rs"
