[package]
name = "hpcd"
version = "0.1.0"
edition = "2024"

[dependencies]
russh = "0.54.3"
russh-config = "0.54.0"
russh-sftp = "2.1.1"
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-types = { workspace = true }
proto = { path = "../proto" }
anyhow = "1.0.99"
tokio-stream = "0.1.17"
clap = { version = "4.5.46", features = ["derive"] }
