[package]
name = "hpcd"
version = "0.1.0"
edition = "2024"

[dependencies]
russh = "0.55.0"
russh-config = "0.54.5"
russh-sftp = "2.1.1"
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-types = { workspace = true }
proto = { path = "../proto" }
anyhow = "1.0.99"
tokio-stream = "0.1.17"
clap = { version = "4.5.46", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
walkdir = "2.5.0"
globset = "0.4.18"
blake3 = "1.8.2"
blake2 = "0.10.6"
sha2 = "0.10.9"
rand = "0.9.2"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.16"
time = { version = "0.3.44", features = ["formatting", "macros"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
futures-util = "0.3.31"
shellexpand = "3.1.1"
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4.42"

[dev-dependencies]
tempfile = "3.13.0"

[features]
serde = []
