[package]
name = "orbitd"
version = "0.16.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
russh = {version="0.55.0", features=["ring", "flate2", "rsa","async-trait", "yasna", ]}
russh-sftp = "2.1.1"
tokio = { workspace = true }
tonic = { workspace = true }
proto = { path = "../proto" }
anyhow = "1.0.99"
async-trait = "0.1.89"
tokio-stream = "0.1.17"
clap = { version = "4.5.46", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "time"] }
tracing-error = "0.2.0"
tracing-appender = "0.2.3"
walkdir = "2.5.0"
globset = "0.4.18"
sha2 = "0.10.9"
blake3 = "1.8.2"
rand = "0.9.2"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.16"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
futures-util = "0.3.31"
shellexpand = "3.1.1"
serde_json = "1.0.145"
chrono = "0.4.42"
dirs = "6.0.0"
toml = { version = "0.8.23", features = ["preserve_order"] }
tera = "1.19.1"
tempfile = "3.13.0"
tar = "0.4.44"
zstd = "0.13.3"
indexmap = { version = "2.12.0", features = ["serde"] }

[dev-dependencies]

[features]
serde = []
