[package]
name = "proto"
version = "0.10.1"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build={workspace=true}
