[package]
name = "proto"
version = "0.12.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
prost.workspace = true
tonic = { workspace = true }
tonic-build.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build={workspace=true}
